--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body{
     max-width: 1000px;
    
     margin: 0px auto;
-    border: 5px solid green;
     
 
 }
@@ -32,8 +31,8 @@ p {
 }
 
 .header-part{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
+        width: 100%;
+        display: flex;
         justify-content: center;
 
         
@@ -58,6 +57,7 @@ p {
     text-decoration: none;
     color: #FFFFFF;
     padding-right: 20px;
+    margin-bottom: 10px;
 
 
 }
@@ -92,8 +92,9 @@ p {
     font-size: 20px;
     padding: 5px;
 }
-.link-button.change {
+.link-button.some-change {
     background-color: #DD0000;
+    color: black;
 }
 .link-button.change a{
     color: white;
@@ -146,6 +147,22 @@ p {
 
 
 }
+.view-button button{
+    font-size: 20px;
+    padding: 20px;
+    border: none;
+    border-radius: 5px;
+    width: 150px;
+    height: 60px;
+    background-color: #DD0000;
+    color: black;
+    margin-left: 35%;
+    margin-top: 30px;
+
+   
+    visibility: hidden; 
+
+}
 
 
 
@@ -185,4 +202,149 @@ hr{
 
 .icon-margin{
     margin-right: 20px;
+}
+.social-media-icon {
+    align-items: center;
+    padding-top: 20px;
+    padding-left: 10px;
+    margin-left: 35%;
+}
+.social-media-icon a{
+    font-size: 40px;
+
+    padding-left: 30px;
+
+}
+
+
+
+/* media queries  */
+
+
+/* mobile devices  */
+
+@media only screen and (max-width:688px) {
+    .header{
+        width: 100%;
+        
+    }
+    .header-part{
+        background-color: black;
+    }
+    
+    .player-element,.header-part,.players {
+        grid-template-columns: repeat(1,1fr);
+        
+        flex-direction: column;
+    }
+    .side-block{
+        margin-top: 300px;
+        margin-left: 25%;
+        margin-right: 25%;
+        margin-bottom: 5%;
+        
+        
+
+    }
+    .player img {
+        width: 100%;
+        height: 100%;
+    }
+    .footer-part,hr,.bottom-text{
+        grid-template-columns: repeat(1,1fr);
+        
+        flex-direction: column;
+
+    }
+    .small-text{
+        margin-top: 10px;
+    }
+
+    
+
+
+
+    
+}
+/* tablet devices  */
+
+@media only screen and (min-width:689px) and (max-width:992px) {
+    .header{
+        width: 100%;
+        
+    }
+
+    .header-part{
+        background-color: black;
+    }
+    .banner-img{
+        margin-top: 10px;
+        height: 600px;
+    }
+    .side-block{
+        display: flex;
+        flex-direction: row;
+        background-color: white;
+        justify-content: space-evenly;
+        margin-top: 50px;
+
+        width: 100%;
+    }
+
+    
+    .player-element,.players {
+        grid-template-columns: repeat(2,1fr);
+        
+        flex-direction: column;
+    }
+
+
+
+
+
+    .player img {
+        width: 100%;
+        height: 100%;
+    }
+    .view-button button{
+
+       
+        visibility: visible; 
+    
+    }
+    .footer-part,hr{
+        grid-template-columns: repeat(1,1fr);
+        
+        flex-direction: column;
+        width: 100%;
+
+    }
+
+    .bottom-text{
+        
+        grid-template-columns: repeat(4,1fr);
+        margin-left: 40%;
+        margin-bottom: 30px;
+        
+        flex-direction: column;
+        
+
+    }
+
+    .social-media-icon {
+        align-items: center;
+        padding-top: 20px;
+        padding-left: 10px;
+        margin-left: 35%;
+    }
+    .social-media-icon a{
+        font-size: 40px;
+    
+        padding-left: 30px;
+    
+    }
+
+
+
+    
 }
